# Advent_Of_Code

./: .gitignore  README.md
Ada/: hello  hello.adb  hello.ali
C/: template.c
C++/: README.md  template.cpp
C++/2015/: CMakeLists.txt  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  json.h  main.cpp
C++/2016/: CMakeLists.txt  assembunny.cpp  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp  util.h
C++/2017/: CMakeLists.txt  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  knot_hash.h  main.cpp
C++/2018/: CMakeLists.txt  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
C++/2019/: .apl.history  CMakeLists.txt  big_int.h  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  intcode.cpp  main.cpp
C++/2020/: CMakeLists.txt  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
C++/2021/: .clang-format  CMakeLists.txt  compile_commands.json  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
C/2015/: CMakeLists.txt  compile_commands.json  day_1.c  main.c
C/2019/: CMakeLists.txt  compile_commands.json  day_1.c  day_2.c  intcode.c  main.c
C/2020/: CMakeLists.txt  compile_commands.json  day_1.c  day_10.c  day_11.c  day_12.c  day_13.c  day_14.c  day_15.c  day_16.c  day_17.c  day_18.c  day_19.c  day_2.c  day_20.c  day_21.c  day_22.c  day_23.c  day_24.c  day_25.c  day_3.c  day_4.c  day_5.c  day_6.c  day_7.c  day_8.c  day_9.c  main.c
Codeless/: 2017_day03.txt  2019_day04.xopp  2019_day04.xopp~  2021_day24.txt
Groovy/2016/: .groovylintrc.json  .project  day_1.groovy  day_10.groovy  day_11.groovy  day_12.groovy  day_13.groovy  day_14.groovy  day_15.groovy  day_16.groovy  day_17.groovy  day_18.groovy  day_19.groovy  day_2.groovy  day_20.groovy  day_21.groovy  day_22.groovy  day_23.groovy  day_24.groovy  day_25.groovy  (+7 more)
(+14 files in other folders)
